--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Montserrat:wght@400;500&family=Poppins:wght@100;300;400;500;600&display=swap');
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
-    color: rebeccapurple;
+    font-family: 'Montserrat', sans-serif;
 }
