--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
  :root {
     --primary-color: #6C63FF;
+    --dark-grey: #64748b;
  }
 
 body{
@@ -52,4 +53,52 @@ hr {
 .list-item-inline {
     display: inline;
     padding: 0rem 0.5rem;
+}
+
+/* navigation */
+
+.navigation {
+    background-color: var(--primary-color);
+    color: white;
+    padding: 1rem;
+    border-bottom-left-radius: 1rem;
+}
+
+.navigation .link-active {
+    font-weight: bold;
+}
+
+.navigation .nav-brand {
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .link {
+    color: white;
+}
+
+
+/* hero */
+
+.hero {
+    padding: 2rem;
+    text-align: center;
+}
+
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading {
+    padding: 1rem;
+    color: var(--dark-grey);
+}
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
 }
