--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
 
 body{
     font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
 
 hr {
@@ -118,3 +119,20 @@ hr {
     background-color: var(--off-white);
 }
 
+/* footer */
+
+footer {
+    background-color: var(--primary-color);
+    padding: 2rem 1rem;
+    text-align: center;
+    color: white;
+    border-top-right-radius: 1rem;
+}
+
+.footer .link{
+    color: white;
+}
+
+.footer ul {
+    padding-inline-start: 0px;
+}
