--- a/style.css
+++ b/style.css
@@ -29,8 +29,11 @@ hr {
 
 /* links */
 .link {
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    /* margin-top: 1rem;
+    margin-bottom: 1rem; */
 }
 
 .link-primary {
@@ -105,6 +108,11 @@ hr {
     color: var(--primary-color);
 }
 
+.heading-inverted {
+    color: var(--primary-color);
+}
+
+
 /* section */
 
 .section {   
@@ -129,6 +137,11 @@ footer {
     border-top-right-radius: 1rem;
 }
 
+.footer .footer-header {
+    font-weight: bold;
+    font-size: large;
+}
+
 .footer .link{
     color: white;
 }
@@ -136,3 +149,4 @@ footer {
 .footer ul {
     padding-inline-start: 0px;
 }
+
